--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -51,6 +51,20 @@ main section.categories-show {
         font-size: 0.8em;
       }
 
+      aside.sold-out {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 4px 7px;
+        text-transform: uppercase;
+        background-color: rgb(206, 112, 112);
+        color: #eee;
+        opacity: 0.8;
+        border-top-left-radius: 4px;
+        border-bottom-right-radius: 20px;
+        font-size: 0.8em;
+      }
+      
       &:hover {
 
         border-color: #999;
