add routes and sessiond for login, logout, register

--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -2,4 +2,10 @@
    <td>
      <%= category.name %>
    </td>
+   <td>
+    <%= category.created_at %>
+  </td>
+  <td>
+    <%= category.updated_at %>
+  </td>
  </tr> 
