add implementation for login, logout and register

--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -48,6 +48,17 @@
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
           <% end %>
         </li>
+
+        <% if current_user %>
+         <li>
+           Signed in as <%= current_user.firstname %> | <%= link_to "Logout", '/logout', style: "display: inline-block" %>
+         </li>
+         <% else %>
+         <li>
+         <%= link_to 'Login', '/login', style: "display: inline-block" %> | <%= link_to 'Signup', '/signup', style: "display: inline-block" %>
+         </li>
+         <% end %>
+
       </ul>
     </div>
   </div>
